--- a/newnote.html
+++ b/newnote.html
@@ -18,23 +18,20 @@
       <h1>Noteit</h1>
     </header>
     <main>
-<form action="index.html" onsubmit="submitNewNote()">
+
+<!-- <form action="index.html" onsubmit="submitNewNote()"> -->      
+<form action="index.html" method="get" onsubmit="view.SaveNote(note)">
   <h3 id="detitel"> Create a new note </h3>
-  <p>Title:</p>
   <input name="title" id="title" type="text"> </input>
 
 <p>Description:</p>
-<input name="description" id="description" type="text" placeholder="Description"> </input>
+<input name="description" id="description" type="text"> </input>
 
 <p>Importance</p>
- <input name="importance" id="importance" type="range" name="points" min="0" max="5">
+ <input name="importance" type="range" id="importance" name="points" min="1" max="3">
 
 <!--new method for importance -->
  <div class="importance">
-  <input type="radio" id="star5" name="rate" value="5" />
-  <label for="star5" title="text"> </label>
-  <input type="radio" id="star4" name="rate" value="4" />
-  <label for="star4" title="text"> </label>
   <input type="radio" id="star3" name="rate" value="3" />
   <label for="star3" title="text"> </label>
   <input type="radio" id="star2" name="rate" value="2" />
@@ -44,7 +41,7 @@
 </div>
 
  <p>Erledigt bis:</p>
-  <input name="enddate" id="enndate" type="date">
+  <input name="enddate" id="enddate" type="date">
   
 <div class="flex">
 <button onclick="cancelNewNote()" id="btnCancel" type="button" class="btn">Cancel</button>
