--- a/newnote.html
+++ b/newnote.html
@@ -1,55 +1,63 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>Noteit</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Palanquin:100,200,300,400" rel="stylesheet">
-    <!--
+  <meta charset="utf-8">
+  <title>Noteit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Palanquin:100,200,300,400" rel="stylesheet">
+  <!--
     Second font: Noto sans
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   -->
+
+    <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="note-model.js"></script>
+  <script type="text/javascript" src="note-view.js"></script>
+  <script type="text/javascript" src="note-service.js"></script>
+  <script type="text/javascript" src="note-controller.js"></script>
 </head>
+
 <body onload="updateTheme()">
   <header>
     <div class="gradient-light top-bar">
       <h1>Noteit</h1>
-    </header>
-    <main>
+  </header>
+  <main>
 
-<!-- <form action="index.html" onsubmit="submitNewNote()"> -->      
-<form action="index.html" method="get" onsubmit="view.SaveNote(note)">
-  <h3 id="detitel"> Create a new note </h3>
-  <input name="title" id="title" type="text"> </input>
+    <!-- <form action="index.html" onsubmit="submitNewNote()"> -->
+    <form action="index.html" method="get" onsubmit="view.SaveNote()">
+      <h3 id="detitel"> Create a new note </h3>
+      <input name="title" id="title" type="text"> </input>
 
-<p>Description:</p>
-<input name="description" id="description" type="text"> </input>
+      <p>Description:</p>
+      <input name="description" id="description" type="text"> </input>
 
-<p>Importance</p>
- <input name="importance" type="range" id="importance" name="points" min="1" max="3">
+      <p>Importance</p>
+      <input name="importance" type="range" id="importance" name="points" min="1" max="3">
 
-<!--new method for importance -->
- <div class="importance">
-  <input type="radio" id="star3" name="rate" value="3" />
-  <label for="star3" title="text"> </label>
-  <input type="radio" id="star2" name="rate" value="2" />
-  <label for="star2" title="text"> </label>
-  <input type="radio" id="star1" name="rate" value="1" />
-  <label for="star1" title="text"> </label>
-</div>
+      <!--new method for importance -->
+      <div class="importance">
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="text"> </label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="text"> </label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="text"> </label>
+      </div>
 
- <p>Erledigt bis:</p>
-  <input name="enddate" id="enddate" type="date">
-  
-<div class="flex">
-<button onclick="cancelNewNote()" id="btnCancel" type="button" class="btn">Cancel</button>
-<button href="index.html" type="submit" value="Submit" id="btnSubmit" class="btn gradient-light">Submit</button>
-</div>
-</form>
-</main>
-<!-- end of new content -->
-    <script type="text/javascript" src="app.js"></script>
+      <p>Erledigt bis:</p>
+      <input name="enddate" id="enddate" type="date">
+
+      <div class="flex">
+        <button onclick="cancelNewNote()" id="btnCancel" type="button" class="btn">Cancel</button>
+        <button href="index.html" type="submit" value="Submit" id="btnSubmit" class="btn gradient-light">Submit</button>
+      </div>
+    </form>
+  </main>
+  <!-- end of new content -->
 </body>
+
 </html>
